# mlb-sentiment

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.cfg
.github/workflows/: ci.yml  deploy.yml  scheduled.yml  verify.yml
.streamlit/: config.toml
dashboard/: app.py  compute.py  dashboard1.py  dashboard2.py  dashboard3.py  dataloader.py  test.py  utility.py
dashboard/app_ci_scripts/: aggregate_global.py  aggregate_sentiment.py  lightweight_dataloader.py
dashboard/widgets/: avg_sentiment_chart.py  comment_summary.py  data_summary.py  event_pie.py  game_events.py  reddit_wordcloud.py  sentiment_chart.py  sentiment_per_game.py  sentiment_per_inning.py  sentiment_score_dists.py  sentiment_vs_run_diff.py  wins_losses.py
data/: reddit.db
data/ATL/: ATL_2026-06-19_comments.parquet  ATL_2026-06-19_game_events.parquet  ATL_2026-06-19_games.parquet  ATL_2026-06-19_posts.parquet  ATL_2026-06-20_comments.parquet  ATL_2026-06-20_game_events.parquet  ATL_2026-06-20_games.parquet  ATL_2026-06-20_posts.parquet  ATL_2026-06-21_comments.parquet  ATL_2026-06-21_game_events.parquet  ATL_2026-06-21_games.parquet  ATL_2026-06-21_posts.parquet  ATL_2026-06-22_comments.parquet  ATL_2026-06-22_game_events.parquet  ATL_2026-06-22_games.parquet  ATL_2026-06-22_posts.parquet  ATL_2026-06-23_comments.parquet  ATL_2026-06-23_game_events.parquet  ATL_2026-06-23_games.parquet  ATL_2026-06-23_posts.parquet  ATL_2026-06-24_comments.parquet  ATL_2026-06-24_game_events.parquet  ATL_2026-06-24_games.parquet  ATL_2026-06-24_posts.parquet  ATL_2026-06-26_comments.parquet  ATL_2026-06-26_game_events.parquet  ATL_2026-06-26_games.parquet  ATL_2026-06-26_posts.parquet  ATL_2026-06-27_comments.parquet  ATL_2026-06-27_game_events.parquet  ATL_2026-06-27_games.parquet  ATL_2026-06-27_posts.parquet  ATL_2026-06-28_comments.parquet  ATL_2026-06-28_game_events.parquet  ATL_2026-06-28_games.parquet  ATL_2026-06-28_posts.parquet  ATL_2026-06-30_comments.parquet  ATL_2026-06-30_game_events.parquet  ATL_2026-06-30_games.parquet  ATL_2026-06-30_posts.parquet  (+76 more)
data/AZ/: AZ_2026-06-19_comments.parquet  AZ_2026-06-19_game_events.parquet  AZ_2026-06-19_games.parquet  AZ_2026-06-19_posts.parquet  AZ_2026-06-20_comments.parquet  AZ_2026-06-20_game_events.parquet  AZ_2026-06-20_games.parquet  AZ_2026-06-20_posts.parquet  AZ_2026-06-21_comments.parquet  AZ_2026-06-21_game_events.parquet  AZ_2026-06-21_games.parquet  AZ_2026-06-21_posts.parquet  AZ_2026-06-22_comments.parquet  AZ_2026-06-22_game_events.parquet  AZ_2026-06-22_games.parquet  AZ_2026-06-22_posts.parquet  AZ_2026-06-23_comments.parquet  AZ_2026-06-23_game_events.parquet  AZ_2026-06-23_games.parquet  AZ_2026-06-23_posts.parquet  AZ_2026-06-24_comments.parquet  AZ_2026-06-24_game_events.parquet  AZ_2026-06-24_games.parquet  AZ_2026-06-24_posts.parquet  AZ_2026-06-26_comments.parquet  AZ_2026-06-26_game_events.parquet  AZ_2026-06-26_games.parquet  AZ_2026-06-26_posts.parquet  AZ_2026-06-27_comments.parquet  AZ_2026-06-27_game_events.parquet  (+30 more)
docs/: databricks.md
pipeline/: __init__.py  build_site_data.py  sample_data.py  verify_teams.py
site/: index.html
tests/: test_api.py  test_cli.py  test_fetch.py  test_info.py  test_pipeline.py
(+3015 files in other folders)
