[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb_sentiment"
version = "0.1.0"
description = "Quantifying MLB fanbase sentiments from in-game events."
readme = "README.md"
requires-python = ">=3.8.10"
license = { file = "LICENSE" }
dependencies = [
    "praw>=7.8.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "MLB-StatsAPI>=1.6.0",
    "pytz>=2025.2",
    "transformers>=4.46.3",
    "click>=8.0.0",
    "tqdm>=4.66.0",
    "vaderSentiment>=3.3.2",
    "azure-storage-blob>=12.26.0",
    "pandas>=2.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.0.0",
    "streamlit>=1.49.1",
    "sqlalchemy>=2.0.43",
    "streamlit-plotly-events>=0.0.6"
]

[tool.flake8]
max-line-length = 200
exclude = [".venv"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mlb-sentiment = "mlb_sentiment.cli:cli"
