[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb_sentiment"
version = "0.1.0"
description = "Quantifying MLB fanbase sentiments from in-game events."
readme = "README.md"
requires-python = ">=3.8.10"
license = { file = "LICENSE" }
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "pytz>=2025.2",
    "click>=8.0.0",
    "tqdm>=4.66.0",
    "azure-storage-blob>=12.26.0",
    "pandas>=2.3.2",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.0.0",
    "streamlit>=1.49.1",
    "sqlalchemy>=2.0.43",
    "streamlit-plotly-events2>=0.0.7",
    "pyodbc>=5.2.0",
    "streamlit-date-picker>=0.0.5",
    "wordcloud>=1.9.4",
    "plotly>=6.3.0",
    "praw>=7.8.1",
    "MLB-StatsAPI>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "vaderSentiment>=3.3.2",
    "transformers>=4.46.3",
]

[tool.flake8]
max-line-length = 200
exclude = [".venv"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mlb-sentiment = "mlb_sentiment.cli:cli"
