[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb_sentiment"
version = "0.1.0"
description = "Quantifying MLB fanbase sentiments from in-game events."
readme = "README.md"
requires-python = ">=3.8.10"
license = { file = "LICENSE" }
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "pytz>=2025.2",
    "click>=8.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.3.2",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "duckdb>=1.0.0",
    "praw>=7.8.1",
    "MLB-StatsAPI>=1.6.0",
]

[project.optional-dependencies]
# Sentiment models used by the fetch step (heavy; only needed when scoring).
models = [
    "vaderSentiment>=3.3.2",
    "transformers>=4.46.3",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.0.0",
    "vaderSentiment>=3.3.2",
    "transformers>=4.46.3",
]

[tool.flake8]
max-line-length = 200
exclude = [".venv", "node_modules", "build", "dist"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mlb-sentiment = "mlb_sentiment.cli:cli"
